# bitcamp2023

./: .gitignore  README.md
backend/: pyproject.toml
backend/openticket/: db.sqlite3  manage.py  openapi-schema.yml
backend/openticket/accounts/: models.py  serializers.py  urls.py  views.py
backend/openticket/accounts/migrations/: 0001_initial.py
backend/openticket/openticket/: asgi.py  serializers.py  settings.py  urls.py  utils.py  views.py  wsgi.py
backend/openticket/tickets/: models.py
backend/openticket/tickets/migrations/: 0001_initial.py
backend/openticket/venues/: models.py  serializers.py  urls.py  views.py
backend/openticket/venues/migrations/: 0001_initial.py
backend/rocky/rocky/: settings.py  urls.py  utils.py  views.py
frontend/: package-lock.json  package.json
frontend/components/BryceAppShell/: BryceAppShell.tsx  BryceSidebar.tsx
frontend/components/ColorSchemeToggle/: ColorSchemeToggle.tsx
frontend/components/OpenTicketAppShell/: OpenTicketAppShell.tsx  OpenTicketSidebar.tsx
frontend/components/Welcome/: Welcome.test.tsx  Welcome.tsx
frontend/pages/: _app.tsx  index.tsx  login.tsx
frontend/public/: images.json
frontend/utilities/: authentication.tsx  formatting.tsx  hooks.tsx  networking.tsx  urls.tsx
frontend/utilities/types/: base.tsx
